# kizzy-selenium-automation

./: .gitignore  Makefile  README.md  pyproject.toml
kizzy/: main.py  save_cookies.py
