[tool.poetry]
name = "kizzy-selenium-automation"
version = "0.1.0"
description = "Automate login and API requests for testnet.kizzy.io using Selenium."
authors = ["sebtheo"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
undetected-chromedriver = "*"
requests = "*"
selenium = "4.11.2"
selenium-wire = "5.1.0"
setuptools = "79.0.0"
packaging = "25.0"
blinker = "1.6.2"

[tool.poetry.group.dev.dependencies]
ruff = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 